# sustainability_ROI_calculator

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LAYMAN_EXPLANATION.md  LICENSE  MIGRATION_NOTES.md  PRODUCTION_READINESS.md  README.md  SOCIAL_MEDIA_CONTENT.md  config.py  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  secrets_adapter.py  security.py  streamlit_app.py  ui_theme.py
.github/: copilot-instructions.md
.github/instructions/: api-ops.instructions.md  documentation.instructions.md  execution-workflow.instructions.md  frontend-quality.instructions.md  security.instructions.md
.github/workflows/: ci.yml  python-app.yml
.streamlit/: secrets.toml.example
docs/: ROLLOUT_IMPLEMENTATION.md  SKILLS_IMPLEMENTATION.md  STANDARDS_IMPLEMENTATION.md
domain/: materials.py  models.py  monte_carlo.py  optimization.py  recommendations.py  scenarios.py
ingestion/: __init__.py  base.py  csv_adapter.py  external_api_adapter.py  factory.py  sqlite_adapter.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy-allow-egress.yaml  pvc.yaml  service.yaml
k8s/base/: ingress.yaml  kustomization.yaml  networkpolicy-allow-ingress.yaml  networkpolicy-default-deny.yaml  secret.example.yaml  serviceaccount.yaml
pages/: 1_Executive_Dashboard.py  2_Material_Explorer.py  3_Custom_Scenario.py
pipeline/: backup.py  runner.py
scripts/: healthcheck.py  load_test.py  metrics_server.py  perf_report.py
tests/: test_completeness_features.py  test_domain.py  test_pipeline.py
(+16 files in other folders)
